--- a/mental-wellness.html
+++ b/mental-wellness.html
@@ -19,7 +19,7 @@
                 <a href="hunger-help.html" class="nav-link">Hunger Help</a>
                 <a href="education-access.html" class="nav-link">Education Access</a>
                 <a href="women-safety.html" class="nav-link">Women Safety</a>
-                <a href="youth-empowerment.html" class="nav-link">Youth Empowerment</a>
+                <a href="Youth Empowerment .html" class="nav-link">Youth Empowerment</a>
                 <a href="health-hygiene.html" class="nav-link">Health & Hygiene</a>
                 <div class="nav-dropdown">
                     <a href="mental-wellness.html" class="nav-link active">Mental Wellness</a>
