--- a/women-safety.html
+++ b/women-safety.html
@@ -26,7 +26,7 @@
                         <a href="women-safety.html#resources">Safety Resources</a>
                     </div>
                 </div>
-                <a href="youth-empowerment.html" class="nav-link">Youth Empowerment</a>
+                <a href="Youth Empowerment .html" class="nav-link">Youth Empowerment</a>
                 <a href="health-hygiene.html" class="nav-link">Health & Hygiene</a>
                 <a href="mental-wellness.html" class="nav-link">Mental Wellness</a>
                 <a href="about-us.html" class="nav-link">About Us</a>
