--- a/education-access.html
+++ b/education-access.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <a href="women-safety.html" class="nav-link">Women Safety</a>
-                <a href="youth-empowerment.html" class="nav-link">Youth Empowerment</a>
+                <a href="Youth Empowerment .html" class="nav-link">Youth Empowerment</a>
                 <a href="health-hygiene.html" class="nav-link">Health & Hygiene</a>
                 <a href="mental-wellness.html" class="nav-link">Mental Wellness</a>
                 <a href="about-us.html" class="nav-link">About Us</a>
